syntax = "proto3";

message Transaction {
  uint64 timestamp = 1;
  uint64 version = 2;
  TransactionInfo info = 3;
  uint64 epoch = 4;
  
  enum TransactionType {
    GENESIS = 0;
    BLOCK_METADATA = 1;
    STATE_CHECKPOINT = 2;
    USER = 3;
  }
  
  TransactionType type = 5;

  oneof txn_data {
    BlockMetadataTransaction block_metadata_txn = 6;
    GenesisTransaction genesis_txn = 7;
    StateCheckpointTransaction state_checkpoint_txn = 8;
    UserTransaction user_txn = 9;
  }
}

message BlockMetadataTransaction {
  string id = 1;
  uint64 round = 2;
  repeated Event events = 3;
  repeated bool previous_block_votes = 4;
  string proposer = 5;
  repeated uint32 failed_proposer_indices = 6;
}

message GenesisTransaction {
  WriteSet payload = 1;
  repeated Event events = 2;
}

message StateCheckpointTransaction {
}

message UserTransaction {
  UserTransactionRequest request = 1;
  repeated Event events = 2;
}

message Event {
  EventKey key = 1;
  uint64 sequence_number = 2;
  string type = 3;
  string data = 4;
}

message TransactionInfo {
  string hash = 1;
  string state_root_hash = 2;
  string event_root_hash = 3;
  uint64 gas_used = 4;
  bool success = 5;
  string vm_status = 6;
  string accumulator_root_hash = 7;
  repeated WriteSetChange changes = 8;
}

message EventKey {
  uint64 creation_number = 1;
  string account_address = 2;
}

message UserTransactionRequest {
  string sender = 1;
  uint64 sequence_number = 2;
  uint64 max_gas_amount = 3;
  uint64 gas_unit_price = 4;
  uint64 expiration_timestamp_secs = 5;
  TransactionPayload payload = 6;
  Signature signature = 7;
}

message WriteSet {
  
  enum WriteSetType {
    SCRIPT_WRITE_SET = 0;
    DIRECT_WRITE_SET = 1;
  }
  
  WriteSetType write_set_type = 1;
  oneof write_set {
    ScriptWriteSet script_write_set = 2;
    DirectWriteSet direct_write_set = 3;
  }
}

message ScriptWriteSet {
  string execute_as = 1;
  ScriptPayload script = 2;
}

message DirectWriteSet {
  repeated WriteSetChange write_set_change = 1;
  repeated Event events = 2;
}

message WriteSetChange {
  
  enum WriteSetChangeType {
    DELETE_MODULE = 0;
    DELETE_RESOURCE = 1;
    DELETE_TABLE_ITEM = 2;
    WRITE_MODULE = 3;
    WRITE_RESOURCE = 4;
    WRITE_TABLE_ITEM = 5;
  }

  WriteSetChangeType type = 1;
  oneof change {
    DeleteModule delete_module = 2;
    DeleteResource delete_resource = 3;
    DeleteTableItem delete_table_item = 4;
    WriteModule write_module = 5;
    WriteResource write_resource = 6;
    WriteTableItem write_table_item = 7;
  }
}

message DeleteModule {
  string address = 1;
  string state_key_hash = 2;
  MoveModuleId module = 3;
}

message DeleteResource {
  string address = 1;
  string state_key_hash = 2;
  MoveStructTag resource = 3;
}

message DeleteTableItem {
  string state_key_hash = 1;
  string handle = 2;
  string key = 3;
}

message WriteModule {
  string address = 1;
  string state_key_hash = 2;
  string data = 3;
}

message WriteResource {
  string address = 1;
  string state_key_hash = 2;
  MoveResource data = 3;
}

message WriteTableItem {
  string state_key_hash = 1;
  string handle = 2;
  string key = 3;
  string value = 4;
}

message TransactionPayload {

  enum PayloadType {
    SCRIPT_FUNCTION_PAYLOAD = 0;
    SCRIPT_PAYLOAD = 1;
    MODULE_BUNDLE_PAYLOAD = 2;
    WRITE_SET_PAYLOAD = 3;
  }

  PayloadType type = 1;
  oneof payload {
    ScriptFunctionPayload script_function_payload = 2;
    ScriptPayload script_payload = 3;
    ModuleBundlePayload module_bundle_payload = 4;
    WriteSetPayload write_set_payload = 5;
  }
}

message ScriptFunctionPayload {
  ScriptFunctionId function = 1;
  repeated string type_arguments = 2;
  repeated string arguments = 3;
}

message ScriptPayload {
  string code = 1;
  repeated string type_arguments = 2;
  repeated string arguments = 3;
}

message ModuleBundlePayload {
  repeated string modules = 1;  
}

message WriteSetPayload {
  WriteSet write_set = 1;
}

message ScriptFunctionId {
  MoveModuleId module = 1;
  string name = 2;
}

message MoveResource {
  MoveStructTag type = 1;
  string data = 2;
}

message MoveModuleId {
  string address = 1;
  string name = 2;
}

message MoveStructTag {
  string address = 1;
  string module = 2;
  string name = 3;
  repeated string generic_type_params = 4;
}

message Signature {

  enum SignatureType {
    ED = 0;
    MULTI_ED = 1;
    MULTI_AGENT = 2;
  }

  SignatureType type = 1;
  oneof signature {
    Ed25519Signature ed = 2;
    MultiEd25519Signature multi_ed = 3;
    MultiAgentSignature multi_agent = 4;
  }
}

message Ed25519Signature {
  string public_key = 1;
  string signature = 2;
}

message MultiEd25519Signature {
  repeated string public_keys = 1;
  repeated string signatures = 2;
  uint32 threshold = 3;
  string bitmap = 4;
}

message MultiAgentSignature {
  AccountSignature sender = 1;
  repeated string secondary_signer_addresses = 2;
  repeated AccountSignature secondary_signers = 3;
}

message AccountSignature {

  enum AccountSignatureType {
    ED = 0;
    MULTI_ED = 1;
  }

  AccountSignatureType type = 1;
  oneof signature {
    Ed25519Signature ed = 2;
    MultiEd25519Signature multi_ed = 3;
  }
}
